--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
 				width: 100vw;
 				height: 100vh;
 			}
+			
+			.logo-text {
+				display: none;
+			}
 		</style>
 	</head>
 	<body>
 		<div class="wrapper">
 			<h1>
 				<img src="ff_logo.svg" alt="Fritz 7 Friends" />
-				<span class="logo-text"></span>
+				<span class="logo-text">Fritz & Friends</span>
 			</h1>
 		</div>
 	</body>
