--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<body>
 		<div class="wrapper">
 			<h1>
-				<img src="ff_logo.svg" alt="Fritz 7 Friends" />
+				<img src="ff_logo.svg" alt="Fritz & Friends" />
 				<span class="logo-text">Fritz & Friends</span>
 			</h1>
 		</div>
