Make it responsive

--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
 				width: 100vw;
 				height: 100vh;
 			}
-			
 			.logo-text {
 				display: none;
+			}
+			.logo-image {
+				width: auto;
+				height: auto;
+				max-width: 80vw;
 			}
 		</style>
 	</head>
 	<body>
 		<div class="wrapper">
 			<h1>
-				<img src="ff_logo.svg" alt="Fritz & Friends" />
+				<img src="ff_logo.svg" alt="Fritz & Friends" class="logo-image" />
 				<span class="logo-text">Fritz & Friends</span>
 			</h1>
 		</div>
