--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				justify-content: center;
 				
 				width: 100vw;
-				height: 100vh;
+				height: 100vmin;
 			}
 			.logo-text {
 				display: none;
