--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 				justify-content: center;
 				
 				width: 100vw;
-				height: 100vmin;
+				height: 100vh;
+				height: calc(100vh - env(safe-area-inset-bottom));
 			}
 			.logo-text {
 				display: none;
